Added fetch employees

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Employees - Milos Savic</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>Employees by Salary</h1>
+      <button id="button">Get employees</button>
+      <ul class="employees">
+        
+      </ul>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
