Fixed button not working issue

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div id="app">
-      <h1>Employees by Salary</h1>
+      <!-- <h1>Employees by Salary</h1>
       <button id="button">Get employees</button>
       <ul class="employees">
         
-      </ul>
+      </ul> -->
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
