Added comments, links

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>Employees - Milos Savic</title>
   </head>
   <body>
-    <div id="app">
-      <!-- <h1>Employees by Salary</h1>
-      <button id="button">Get employees</button>
-      <ul class="employees">
-        
-      </ul> -->
+    <div id="app"></div>
+    <div class="footer">
+      <p>Made by Milos Savic</p>
+      <a href="https://github.com/msavic248" target="_blank"><img src="/GitHub-Mark-Light-32px.png" width="24px" height="24px"></a>
+      <a href="https://www.linkedin.com/in/milos-savic-86690a211/" target="_blank"><img src="/In-White-26.png" width="24px" height="24px"></a>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
